--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a90698a
+	base = eb5b203
 	trimbase = 
 	parent = release/foxy/sbg_driver
-	previous = 
+	previous = a90698a
