--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ac3e12
+	base = 8895633
 	trimbase = 
 	parent = debian/foxy/sbg_driver
-	previous = 
+	previous = 9ac3e12
