--- a/config/example/ellipse_D_default.yaml
+++ b/config/example/ellipse_D_default.yaml
@@ -1,7 +1,13 @@
 /**:
   ros__parameters:
-    # Configuration file for SBG device through an Uart interface.
-    
+    # Configuration file for SBG Ellipse
+    # YAML
+
+    # Ellipse-A - Magnetic-based
+    # Ellipse-E - External GNSS
+    # Ellipse-N - GNSS-based
+    # Ellipse-D - Dual-antenna GNSS
+
     driver:
       # Node frequency (Hz)
       # Note: The frequency should be at least two times higher than the highest
@@ -12,7 +18,7 @@
 
     odometry:
       # Enable ROS odometry messages.
-      enable: false
+      enable: true
       # Publish odometry transforms.
       publishTf: true
       # Odometry frame IDs.
@@ -21,16 +27,15 @@
       initFrameId: "map"
 
     # Configuration of the device with ROS.
-    confWithRos: false
-    
-    # Uart configuration
+    confWithRos: true
+
     uartConf:
       # Port Name
       portName: "/dev/ttyUSB0"
-    
+
       # Baude rate (4800 ,9600 ,19200 ,38400 ,115200 [default],230400 ,460800 ,921600)
-      baudRate: 115200
-    
+      baudRate: 921600
+
       # Port Id
       # 0 PORT_A: Main communication interface. Full duplex.
       # 1 PORT_B: Auxiliary input interface for RTCM
@@ -38,7 +43,7 @@
       # 3 PORT_D: Auxiliary input interface
       # 4 PORT_E: Auxiliary input/output interface
       portID: 0
-    
+
     # Sensor Parameters
     sensorParameters:
       # Initial latitude (°)
@@ -53,7 +58,7 @@
       month: 03
       # day in month at startup
       day: 10
-    
+
       # Montion profile ID
       # 1 GENERAL_PURPOSE Should be used as a default when other profiles do not apply
       # 2 AUTOMOTIVE      Dedicated to car applications
@@ -61,7 +66,7 @@
       # 4 AIRPLANE        For fixed wings aircraft
       # 5 HELICOPTER      For rotary wing aircraft
       motionProfile: 1
-    
+
     # IMU_ALIGNMENT_LEVER_ARM
     imuAlignementLeverArm:
       # IMU X axis direction in vehicle frame
@@ -92,7 +97,7 @@
       leverArmY: 0.0
       # Z Primary lever arm in IMU Z axis (once IMU alignment is applied) m
       leverArmZ: 0.0
-    
+
     # AIDING_ASSIGNMENT
     # Note: GNSS1 module configuration can only be set to an external port on Ellipse-E version.
     # Ellipse-N users must set this module to MODULE_INTERNAL. On the other hand, rtcmModule is only
@@ -104,7 +109,7 @@
       # 2 Module connected on PORT_C
       # 3 Module connected on PORT_D
       # 5 Module is connected internally
-      gnss1ModulePortAssignment: 255
+      gnss1ModulePortAssignment: 5
       # GNSS module sync assignment:
       # 0 Module is disabled
       # 1 Synchronization is done using SYNC_IN_A pin
@@ -114,7 +119,7 @@
       # 5 Synchronization is internal
       # 6 Synchronization is done using SYNC_OUT_A pin
       # 7 Synchronization is done using SYNC_OUT_B pin
-      gnss1ModuleSyncAssignment: 0
+      gnss1ModuleSyncAssignment: 5
       # RTCM input port assignment for Ellipse-N DGPS (see gnss1ModulePortAssignment for values)
       rtcmPortAssignment: 255
       # Odometer module pin assignment
@@ -122,7 +127,7 @@
       # 1 Odometer connected only to ODO_A (unidirectional).
       # 2 Odometer connected to both ODO_A (signal A) and ODO_B (Signal B or direction) for bidirectional odometer.
       odometerPinAssignment: 0
-    
+
     magnetometer:
       # Magnetometer model ID
       # 201 Should be used in most applications
@@ -133,23 +138,23 @@
       # 1 Measurement is rejected if inconsistent with current estimate (depending on error model)
       # 2 Measurement is always accepted
       magnetometerRejectMode: 1
-    
+
       # Theses parameters are only used for a calibration run
       calibration:
-        # 1 2D Tell the device that the magnetic calibration will be performed with limited motions. 
-        #     This calibration mode is only designed to be used when roll and pitch motions are less than ± 5°. 
+        # 1 2D Tell the device that the magnetic calibration will be performed with limited motions.
+        #     This calibration mode is only designed to be used when roll and pitch motions are less than ± 5°.
         #     To work correctly, the device should be rotated through at least a full circle.
         # 2 3D Tell the device to start a full 3D magnetic calibration procedure. The 3D magnetic calibration offers the best accuracy
         mode: 2
-    
-        # 0 LOW_BW Use this parameter in case of strong magnetic noise during calibration. 
+
+        # 0 LOW_BW Use this parameter in case of strong magnetic noise during calibration.
         #     Motion during calibration is then limited to slow rotations.
-        # 1 MEDIUM_BW Tell the device that medium dynamics will be observed during the magnetic calibration process. 
+        # 1 MEDIUM_BW Tell the device that medium dynamics will be observed during the magnetic calibration process.
         #     It can be used in case of medium magnetic noise during calibration process. Medium dynamics are used during calibration.
         # 2 HIGH_BW This parameter is suitable to most applications. It can be used when the dynamics during calibration are relatively high.
         bandwidth: 2
-    
-    
+
+
     # GNSS configuration
     # Note: Secondary level arms should only be considered in case of dual antenna GNSS receiver. It can be left to 0 otherwise.
     gnss:
@@ -160,8 +165,8 @@
       # 104 Used on Ellipse-E to setup a connection to ublox in read only mode.
       # 106 Used on Ellipse-E to setup a connection to Novatel receiver in read only mode.
       # 107 Used on Ellipse-D by default
-      gnss_model_id: 101
-    
+      gnss_model_id: 107
+
       #GNSS primary antenna lever arm in IMU X axis (m)
       primaryLeverArmX: 0.0
       #GNSS primary antenna lever arm in IMU Y axis (m)
@@ -169,58 +174,58 @@
       #GNSS primary antenna lever arm in IMU Z axis (m)
       primaryLeverArmZ: 0.0
       #GNSS primary antenna precise. Set to true if the primary lever arm has been accurately entered and doesn't need online re-estimation.
-      primaryLeverPrecise: true
-    
+      primaryLeverPrecise: false
+
       #GNSS secondary antenna lever arm in IMU X axis (m)
       secondaryLeverArmX: 0.0
       #GNSS secondary antenna lever arm in IMU Y axis (m)
       secondaryLeverArmY: 0.0
       #GNSS secondary antenna lever arm in IMU Z axis (m)
       secondaryLeverArmZ: 0.0
-    
+
       # Secondary antenna operating mode.
       # 1 The GNSS will be used in single antenna mode only and the secondary lever arm is not used.
       # 2 [Reserved] The GNSS dual antenna information will be used but the secondary lever arm is not known.
       # 3 The GNSS dual antenna information will be used and we have a rough guess for the secondary lever arm.
       # 4 The GNSS dual antenna information will be used and the secondary lever arm is accurately entered and doesn't need online re-estimation.
-      secondaryLeverMode: 1
-    
+      secondaryLeverMode: 3
+
       # Rejection mode for position
       # 0 Measurement is not taken into account
       # 1 Measurement is rejected if inconsistent with current estimate (depending on error model)
       # 2 Measurement is always accepted
-      posRejectMode: 1
+      posRejectMode: 2
       # Rejection mode for velocity (see posRejectMode values)
-      velRejectMode: 1
+      velRejectMode: 2
       # Rejection mode for true heading (see posRejectMode values)
-      hdtRejectMode: 1
-    
+      hdtRejectMode: 2
+
     # Odometer configuration
     odom:
       # Odometer's gain Pulses/m
-      gain: 4800.0 
+      gain: 4800.0
       # User gain average error (%)
-      gain_error: 0
+      gain_error: 5
       # Odometer's direction
       # false: positive
       # true: negative
       direction: false
-    
+
       # Odometer lever arm in IMU X axis (m)
       leverArmX: 0.0
       # Odometer lever arm in IMU Y axis (m)
       leverArmY: 0.0
       # Odometer lever arm in IMU Z axis (m)
       leverArmZ: 0.0
-    
+
       # Odometer rejection mode
       # 0 Measurement is not taken into account
       # 1 Measurement is rejected if inconsistent with current estimate (depending on error model)
       # 2 Measurement is always accepted
       rejectMode: 1
-    
+
     # ToDo: event & CAN configuration
-    
+
     ############################### Output configuration ###############################
     # 0 Output is disabled
     # 1 Output is generated at 200Hz
@@ -251,7 +256,7 @@
 
       # Ros standard output:
       # Note: If true publish ROS standard messages.
-      ros_standard: false
+      ros_standard: true
 
       # Frame convention:
       # Note: If true messages are expressed in the ENU convention.
@@ -264,13 +269,13 @@
       # Note: If the frame convention is NED so the default frame ID is (imu_link_ned)
       #       else if the convention is ENU so the default frame ID is (imu_link)
       frame_id: "imu_link_ned"
-    
+
       # Status general, clock, com aiding, solution, heave
-      log_status: 200
+      log_status: 8
       # Includes IMU status, acc., gyro, temp delta speeds and delta angles values
       log_imu_data: 8
       # Includes roll, pitch, yaw and their accuracies on each axis
-      log_ekf_euler: 8
+      log_ekf_euler: 0
       # Includes the 4 quaternions values
       log_ekf_quat: 8
       # Position and velocities in NED coordinates with the accuracies on each axis
@@ -278,9 +283,9 @@
       # Heave, surge and sway and accelerations on each axis for up to 4 points
       log_ship_motion: 0
       # Provides UTC time reference
-      log_utc_time: 200
+      log_utc_time: 8
       # Magnetic data with associated accelerometer on each axis
-      log_mag: 0
+      log_mag: 8
       # Magnetometer calibration data (raw buffer)
       log_mag_calib: 0
       # GPS velocities from primary or secondary GPS receiver
@@ -301,4 +306,4 @@
       # Air data
       log_air_data: 0
       # Short IMU data
-      log_imu_short: 8
+      log_imu_short: 0
