--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>sbg_driver</name>
-  <version>1.0.1</version>
+  <version>3.1.0</version>
   <description>
     ROS driver package for communication with the SBG navigation systems.
   </description>
   <author>SBG Systems</author>
-  <maintainer email="remi.burtin@sbg-systems.com">Rémi Burtin</maintainer>
+  <maintainer email="support@sbg-systems.com">SBG Systems</maintainer>
   <license>MIT</license>
 
   <url type="website">http://wiki.ros.org/sbg_driver</url>
@@ -21,6 +21,10 @@
   <build_depend>std_srvs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>tf2_msgs</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
@@ -28,6 +32,10 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>tf2_ros</run_depend>
+  <run_depend>tf2_msgs</run_depend>
+  <run_depend>tf2_geometry_msgs</run_depend>
  -->
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -38,6 +46,10 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>boost</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
