--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/sbg_driver
-	previous = 
-	base = d7558d4
+	previous = d7558d4
+	base = 025d0e2
 	trim = 
 	trimbase = 
