--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/sbg_driver
-	previous = 
-	base = 1c28f16
+	previous = 1c28f16
+	base = 94a565a
 	trim = 
 	trimbase = 
