--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/sbg_driver
-	previous = 
-	base = ffe17cc
+	previous = ffe17cc
+	base = f696c20
 	trim = 
 	trimbase = 
