--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/sbg_driver
-	previous = 
-	base = e361f23
+	previous = e361f23
+	base = 4ccc636
 	trim = 
 	trimbase = 
