--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/sbg_driver
-	previous = 
-	base = cc2aa79
+	previous = cc2aa79
+	base = 3e7ab9b
 	trim = 
 	trimbase = 
