--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/sbg_driver
-	previous = 
-	base = 8bddef3
+	previous = 8bddef3
+	base = 9a5f063
 	trim = 
 	trimbase = 
