--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/sbg_driver
-	previous = 
-	base = 87f7ccc
+	previous = 87f7ccc
+	base = 404ae0b
 	trim = 
 	trimbase = 
