--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/sbg_driver
-	previous = 
-	base = ff42099
+	previous = ff42099
+	base = c671301
 	trim = 
 	trimbase = 
