--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/sbg_driver
-	previous = 
-	base = ed7cd6c
+	previous = ed7cd6c
+	base = 1b1d380
 	trim = 
 	trimbase = 
