--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/sbg_driver
-	previous = 
-	base = a8c0895
+	previous = a8c0895
+	base = aafe6d0
 	trim = 
 	trimbase = 
