--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/sbg_driver
-	previous = 
-	base = 1ad1983
+	previous = 1ad1983
+	base = 211f5bf
 	trim = 
 	trimbase = 
