--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/sbg_driver
-	previous = 
-	base = f55e815
+	previous = f55e815
+	base = 009291a
 	trim = 
 	trimbase = 
