--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/sbg_driver
-	previous = 
-	base = f2c4cd0
+	previous = f2c4cd0
+	base = 27f29db
 	trim = 
 	trimbase = 
