--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/sbg_driver
-	previous = 
-	base = b683f27
+	previous = b683f27
+	base = ea77fb9
 	trim = 
 	trimbase = 
