--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/sbg_driver
-	previous = 
-	base = 28b8d3f
+	previous = 28b8d3f
+	base = 2f4b93f
 	trim = 
 	trimbase = 
