--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sbg_driver
-	previous = 
-	base = 8679662
+	previous = 8679662
+	base = 034467d
 	trim = 
 	trimbase = 
