--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.2.0-1": ["Thu Oct 17 2024", "SBG Systems", "support@sbg-systems.com"]}
+{"3.3.0-1": ["Fri Oct 17 2025", "SBG Systems", "support@sbg-systems.com"], "3.2.0-1": ["Thu Oct 17 2024", "SBG Systems", "support@sbg-systems.com"]}
