--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/kilted/sbg_driver
-	previous = 
-	base = b549abc
+	previous = b549abc
+	base = db3d06e
 	trim = 
 	trimbase = 
