--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/kilted/sbg_driver
-	previous = 
-	base = a1acd0b
+	previous = a1acd0b
+	base = 7e36931
 	trim = 
 	trimbase = 
