--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/kilted/sbg_driver
-	previous = 
-	base = 241f17e
+	previous = 241f17e
+	base = d13531d
 	trim = 
 	trimbase = 
