--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/kilted/sbg_driver
-	previous = 
-	base = ed82bed
+	previous = ed82bed
+	base = d647865
 	trim = 
 	trimbase = 
