Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.3.0-1": ["Fri Oct 17 2025", "SBG Systems", "support@sbg-systems.com"]}
+{"3.3.1-1": ["Mon Nov 10 2025", "SBG Systems", "support@sbg-systems.com"], "3.3.0-1": ["Fri Oct 17 2025", "SBG Systems", "support@sbg-systems.com"]}
